tests/grammar/types/var_type_annotation/type_fail_12/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:7:1
  |
7 | foo: int = Foo {
  | ^ expected int, got Foo
  |